File Name: CHANGES

01/28/2015 FASP 1.6.7:
- Remove ISTART, N2C, and C2N.

01/27/2015 FASP 1.6.6:
- Clean up the code and prepare for releasing the package.
- Clean up aggregation code.
- Clean up some error, warning, debug messages.
- Clean up comments and fix typos in the comments.
- Fix wrong warning messages in iterative methods.
- Remove unused variables. 
- Check Doxygen errors and messages.
- If cmake does not find Doxygen file, do not quit; just give warning.
- Do not archive VS08 any more; remove support to VS08 and earlier versions.
- Update Doxygen, documentation, and webpage.

01/13/2015 FASP 1.6.5:
- Rearrange multilevel cycles in nonlinear AMLI.
- Fix memory leakage in MUMPS interface.
- Modify INSTALL and README messages.
- Slightly change Makefile, especially the screen messages and optimal options.
- Reduce number of memory allocations in pairwise aggregation.
- Fix some false WARNINGs in iterative methods; more need to be changed.
- Add some controls on coarsening quality: like coarsening rate.
- Update regression results for new pairwise aggregation.
- Update Doxygen and webpage.
- Update Readme file.

01/01/2015 FASP 1.6.4:
- Fix GCR file name conflicition, spgcr.c -> pgcr.c.
- Update VS2010 solution, changing from CPP to C, use C99 option.
- Change workspace length from LONG to unsigned LONG for GMRES methods.
- Fix warning messages for memory allocation.
- Fix memory leakage for pairwise aggregation when matrix is nonsymmetric.
- Re-format a few source codes for better printing.
- Fix a warning in pgcg.c; should rewrite this file. 

12/30/2014 FASP 1.6.3:
- Add new pairwise aggregation code.
- Add new GCR iterative solver.
- Update nonlinear AMLI cycle.
- Find a bug in DIAG_PREF option.
- Stop using old Schwarz smoother.
- Format C code a little.
- Update regression test and its results.
- Update log.

12/26/2014 FASP 1.6.2:
- Modify CMAKE compiler preference: use CC environment first.
- Add aggressive coarsening based on MIS.