@@ -144,7 +144,7 @@ INT fasp_solver_dcsr_pbcgs (dCSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if (relres<tol) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
@@ -487,7 +487,7 @@ INT fasp_solver_dbsr_pbcgs (dBSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if (relres<tol) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
@@ -830,7 +830,7 @@ INT fasp_solver_bdcsr_pbcgs (block_dCSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if (relres<tol) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
@@ -1173,7 +1173,7 @@ INT fasp_solver_dstr_pbcgs (dSTRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if (relres<tol) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
