@@ -144,7 +144,7 @@ INT fasp_solver_dcsr_pcg (dCSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
@@ -426,7 +426,7 @@ INT fasp_solver_dbsr_pcg (dBSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
@@ -710,7 +710,7 @@ INT fasp_solver_bdcsr_pcg (block_dCSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
@@ -994,7 +994,7 @@ INT fasp_solver_dstr_pcg (dSTRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,iter,relres,absres0,0.0);
