@@ -147,6 +147,9 @@ INT fasp_solver_dcsr_pgmres (dCSRmat *A,
             goto FINISHED;
     }
     
+    // if initial residual is small, no need to iterate!
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
+
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0.0);
     
@@ -447,6 +450,9 @@ INT fasp_solver_bdcsr_pgmres (block_dCSRmat *A,
             goto FINISHED;
     }
     
+    // if initial residual is small, no need to iterate!
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
+
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0.0);
     
@@ -747,6 +753,9 @@ INT fasp_solver_dbsr_pgmres (dBSRmat *A,
             goto FINISHED;
     }
     
+    // if initial residual is small, no need to iterate!
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
+
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0.0);
     
@@ -1048,6 +1057,9 @@ INT fasp_solver_dstr_pgmres (dSTRmat *A,
             goto FINISHED;
     }
     
+    // if initial residual is small, no need to iterate!
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
+
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0.0);
     
