@@ -162,7 +162,7 @@ INT fasp_solver_dcsr_pvgmres (dCSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0);
@@ -504,7 +504,7 @@ INT fasp_solver_bdcsr_pvgmres (block_dCSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0);
@@ -849,7 +849,7 @@ INT fasp_solver_dbsr_pvgmres (dBSRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0);
@@ -1194,7 +1194,7 @@ INT fasp_solver_dstr_pvgmres (dSTRmat *A,
     }
     
     // if initial residual is small, no need to iterate!
-    if ( relres < tol ) goto FINISHED;
+    if ( relres < tol || absres0 < 1e-3*tol ) goto FINISHED;
     
     // output iteration information if needed
     print_itinfo(print_level,stop_type,0,relres,absres0,0);
