@@ -1,7 +1,8 @@
 File Name: CHANGES
 
-01/28/2015 FASP 1.6.7:
+01/30/2015 FASP 1.6.7:
 - Remove ISTART, N2C, and C2N.
+- Fix initial residual check for Krylov methods: check absolute and relative residuals.
 
 01/27/2015 FASP 1.6.6:
 - Clean up the code and prepare for releasing the package.
